Add Dynamic Controllers Wire Controller to Order Service Additional Domain Modeling

--- a/src/ApiApplication/ApiApplication.csproj
+++ b/src/ApiApplication/ApiApplication.csproj
@@ -5,10 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common.SeedWork\Common.SeedWork.csproj" />
+    <ProjectReference Include="..\OrderManagementService\OrderManagementService.csproj" />
   </ItemGroup>
 
 </Project>
